--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8000
+server.context-path=/
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/activiti?characterEncoding=UTF-8
